--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
   font-family: "Arial", sans-serif;
 }
 img {
+  float: right;
   width: 150px;
   height: auto;
   border-radius: 20px;
-  margin-left: 0;
+  margin-left: 0px;
   margin-right: 20px;
 }
 .container {
@@ -17,16 +18,25 @@ img {
   max-width: 400px;
 }
 
-h3 {
-  color: #ff6f61;
+li {
+  text-align: justify;
+}
+footer {
   text-align: center;
-  font-size: 28px;
-  line-height: 1.5;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* Đổ bóng cho chữ */
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 10px;
-  padding: 15px;
-  margin: 20px auto;
-  width: 80%;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  background-color: #f0f0f0;
+  color: #555;
+  font-size: 14px;
+  margin-top: 20px;
+}
+a {
+  text-decoration: none;
+  color: #333;
+  transition:
+    color 0.3s ease,
+    transform 0.3s ease;
+}
+a:hover {
+  text-decoration: underline;
+  transition: scale(1.05);
 }
