--- a/style.css
+++ b/style.css
@@ -31,12 +31,8 @@ footer {
 }
 a {
   text-decoration: none;
-  color: #333;
-  transition:
-    color 0.3s ease,
-    transform 0.3s ease;
 }
 a:hover {
   text-decoration: underline;
-  transition: scale(1.05);
+  color: yellow;
 }
